# study-buddy

./: .gitignore  README.md  audio_recorder.py  camera_ocr.py  config.py  discord_sink.py  env_loader.py  event_log.py  file_artifacts.py  ollama_client.py  opencode.json  pyproject.toml  requirements.txt  runtime.py  screen_ocr.py  skills-lock.json  state_store.py  summarize_responses.py  summary_watcher.py  test_crop.py  utils.py  youtube_probe.py
api/: app.py  dependencies.py
api/routes/: nodes.py  pipelines.py  runs.py
capture/: camera.py  screen.py
cli/: camera.py  pipeline.py  screen.py  summarize.py  test_crop.py  watch.py
core/: db.py  event_log.py  file_artifacts.py
docs/: ARCHITECTURE.md  IDEAS.md  REFACTOR.md  VISION.md
extra_features/: __init__.py  pdf_images.py
extras/: video_frames.py  whisper.py
nodes/processors/: hash_dedup.py  ollama_ocr.py  ollama_summarize.py
nodes/sinks/: discord.py  jsonl.py
nodes/sources/: camera.py  folder.py  screen.py
ollama/: client.py
pipelines/: __init__.py  image-ocr-summary-watcher.py  image-ollama-ocr.py  image_ocr.py  image_ocr_summary.py  image_ocr_summary_watcher.py  image_ollama_ocr.py
pipelines/defs/: camera-ocr.yaml  screen-ocr-summarize.yaml  screen-ocr.yaml
runtime/: context.py  loader.py  protocol.py  registry.py  runner.py
summary/: batcher.py  watcher.py
tests/: test_api.py  test_db.py  test_hash_dedup.py  test_loader.py  test_registry.py  test_runner.py
web/: package-lock.json  package.json  vite.config.ts
web/src/: App.tsx
web/src/components/: Canvas.tsx  PipelineNode.tsx  (+2 more)
(+1 files in other folders)
