[project]
name = "screen-ocr"
version = "0.2.0"
description = "Screen capture OCR pipeline with Ollama"
requires-python = ">=3.11"
dependencies = [
    "Pillow>=10.0",
    "opencv-python>=4.9",
    "PyMuPDF>=1.24",
    "PyYAML>=6.0",
]

[project.scripts]
screen-ocr = "cli.pipeline:main"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
